# profile

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 5475f050cbf0_init.py
app/: main.py  metrics.py
app/api/: analytics.py  avatars.py  creators.py  internal.py  profiles.py  subscriptions.py  tiers.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/db/: session.py
app/events/: consumer.py  publisher.py
app/models/: enums.py  profile.py  subscription.py  tier.py
app/schemas/: profile.py  subscription.py  tier.py
app/services/: analytics_client.py  avatar_service.py  profile_service.py  subscription_service.py  tier_service.py
app/tasks/: subscription_expiry.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: profile_service.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: seed_metrics.py
tests/: conftest.py
tests/api/: test_profile_analytics_api.py  test_profile_api_smoke.py  test_profile_internal_and_subscriptions.py  test_profile_tiers_and_avatar_api.py
tests/contracts/: test_profile_event_contracts.py
tests/e2e/: conftest.py  test_auth_profile_live_flow.py  test_profile_internal_live.py
tests/unit/: test_profile_service_smoke.py
