[project]
name = "profile-service"
version = "0.1.0"
description = "Profile, tiers, and subscriptions microservice for TransFans platform"
authors = [
    {name = "TransFans Team"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy[asyncio] (>=2.0.47,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "aio-pika (>=9.6.1,<10.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "minio (>=7.2.0,<8.0.0)",
    "python-multipart (>=0.0.20,<1.0.0)",
    "alembic-postgresql-enum (>=1.10.0,<2.0.0)",
    "prometheus-fastapi-instrumentator (>=0.6.0)",
    "prometheus-client (>=0.20.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.4"
pytest-cov = "^7.1.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
